--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
     display: flex;
 }
 :root{
-    --foca: lime;
+    --foca: white;
     --foca2: rgba(144, 100, 182, 0.6);
 }
 body{
@@ -27,7 +27,7 @@ body{
                             "contenido contenido aside"
                             "footer footer footer";
     grid-template-rows: 150px 1fr 80px;
-    @media (--small-viewport){
+    @media (--mini){
       grid-template-columns: 1fr;
       grid-template-areas:    "header"
                               "contenido"
@@ -36,7 +36,7 @@ body{
                               "coda";
 
     }
-    height: 100vh;
+    height: 70vh;
     padding: 0;
     margin: 0;
     & .jaja{
@@ -55,6 +55,7 @@ header{
     grid-area: header;
     bg: rgba(150, 100, 200, 0.8);
 
+
 }
 aside{
     grid-area: aside;
@@ -67,28 +68,23 @@ aside{
 }
 footer{
     grid-area: footer;
-    bg: lime;
+    border: 5px yellow solid;
     color: rgba(180, 100, 20, 0.8);
+    @media (--mini){
+      bg: red;
+    }
+    @media (--media){
+      bg: yellow;
+    }
+    @media (--grande){
+      bg: lime;
+    }
+    @media (--gigante){
+      bg: peru;
+    }
 }
 p:at-least(2){
     bg: ;
 }
-#fullscreen:fullscreen {
-  padding: 42px;
-  background-color: pink;
-  border:2px solid #f00;
-  font-size: 200%;
-}
 
-#fullscreen:fullscreen > h1 {
-  color: red;
-}
-
-#fullscreen:fullscreen > p {
-  color: darkred;
-}
-
-#fullscreen:fullscreen > button {
-  display: none;
-}
 /*Este es un simple comentario*/
